Added cancel button

--- a/app/design/frontend/base/default/template/buckaroo3extended/payconiq/checkout/pay.phtml
+++ b/app/design/frontend/base/default/template/buckaroo3extended/payconiq/checkout/pay.phtml
@@ -6,12 +6,12 @@
     <div id="tig_buckaroo_payconiq_items">
         <div id="tig_buckaroo_payconiq_qr"></div>
 
-<!--        <button id="tig_buckaroo_payconiq_cancel" type="button" title="Cancel" class="button"-->
-<!--                onclick="location.href = '--><?php //echo $this->getCancelUrl(); ?><!--'">-->
-<!--            <span>-->
-<!--                <span>Cancel</span>-->
-<!--            </span>-->
-<!--        </button>-->
+        <button id="tig_buckaroo_payconiq_cancel" type="button" title="Cancel" class="button"
+                onclick="location.href = '<?php echo $this->getCancelUrl(); ?>'">
+            <span>
+                <span>Cancel</span>
+            </span>
+        </button>
     </div>
 </div>
 
