--- a/app/design/frontend/base/default/template/buckaroo3extended/payconiq/checkout/pay.phtml
+++ b/app/design/frontend/base/default/template/buckaroo3extended/payconiq/checkout/pay.phtml
@@ -6,8 +6,7 @@
     <div id="tig_buckaroo_payconiq_items">
         <div id="tig_buckaroo_payconiq_qr"></div>
 
-        <button id="tig_buckaroo_payconiq_cancel" type="button" title="Cancel" class="button"
-                onclick="location.href = '<?php echo $this->getCancelUrl(); ?>'">
+        <button id="tig_buckaroo_payconiq_cancel" type="button" title="Cancel" class="button" onclick="cancelPayment()">
             <span>
                 <span>Cancel</span>
             </span>
@@ -18,6 +17,22 @@
 <script type="text/javascript" src="//checkout.buckaroo.nl/api/buckaroosdk/script"></script>
 <script type="text/javascript">
     jQuery_1123(function() {
-        BuckarooSdk.Payconiq.initiate("#tig_buckaroo_payconiq_qr", "<?php echo $this->getTransactionKey(); ?>");
+        BuckarooSdk.Payconiq.initiate(
+            "#tig_buckaroo_payconiq_qr",
+            "<?php echo $this->getTransactionKey(); ?>",
+            function(status, params) {
+                if (status === 'SUCCESS') {
+                    jQuery_1123('#tig_buckaroo_payconiq_cancel').hide();
+                }
+
+                return true;
+            }
+        );
     });
+
+    var cancelPayment = function() {
+        jQuery_1123('#tig_buckaroo_payconiq_qr').html('<?php echo $this->getCancelMessage(); ?>');
+
+        location.href = '<?php echo $this->getCancelUrl(); ?>';
+    };
 </script>
