--- a/app/design/frontend/rwd/default/template/buckaroo3extended/p24/checkout/form.phtml
+++ b/app/design/frontend/rwd/default/template/buckaroo3extended/p24/checkout/form.phtml
@@ -1,5 +1,4 @@
 <?php
-
 /**
  *
  *          ..::..
@@ -30,13 +29,8 @@
  * @copyright   Copyright (c) Total Internet Group B.V. https://tig.nl/copyright
  * @license     http://creativecommons.org/licenses/by-nc-nd/3.0/nl/deed.en_US
  */
-class TIG_Buckaroo3Extended_Model_PaymentMethods_P24_PaymentMethod extends TIG_Buckaroo3Extended_Model_PaymentMethods_PaymentMethod
-{
-    public $allowedCurrencies = array(
-        'PLN',
-    );
+?>
+<div id="payment-errors" class="validation-advice" style="display:none;"></div>
 
-    protected $_code = 'buckaroo3extended_p24';
-
-    protected $_formBlockType = 'buckaroo3extended/paymentMethods_p24_checkout_form';
-}
+<?php $_code = $this->getMethodCode() ?>
+<ul id="payment_form_<?php echo $_code ?>" style="display:none" class="buckaroo3extended_input form-list buckaroo-method"></ul>
