BUCKM1-554 : Centered the failure cross

--- a/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_payconiq_pay.css
+++ b/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_payconiq_pay.css
@@ -61,3 +61,9 @@
 #tig_buckaroo_payconiq_container #tig_buckaroo_payconiq_qr img {
     display: inline-block;
 }
+
+#tig_buckaroo_payconiq_container #tig_buckaroo_payconiq_qr .cross:before,
+#tig_buckaroo_payconiq_container #tig_buckaroo_payconiq_qr .cross:after {
+    top: 60px;
+    margin-left: -6px;
+}
