BUCKM1-424 : Resolved MEQP warnings for app/design/frontend

--- a/app/design/frontend/base/default/template/buckaroo3extended/directdebit/info.phtml
+++ b/app/design/frontend/base/default/template/buckaroo3extended/directdebit/info.phtml
@@ -1,14 +1,15 @@
 <p><strong><?php echo $this->escapeHtml($this->getMethod()->getTitle()) ?></strong></p>
 
-<?php if ($_specificInfo = $this->getSpecificInformation()):?>
+<?php if ($specificInfo = $this->getSpecificInformation()):?>
 <table>
     <tbody>
-    <?php foreach ($_specificInfo as $_label => $_value):?>
+    <?php foreach ($specificInfo as $label => $value):?>
         <tr>
-            <th><strong><?php echo $this->escapeHtml($_label)?>:</strong></th>
+            <th><strong><?php echo $this->escapeHtml($label)?>:</strong></th>
         </tr>
         <tr>
-            <td><?php echo nl2br(implode($this->getValueAsArray($_value, true), "\n"))?></td>
+            <?php // @codingStandardsIgnoreLine ?>
+            <td><?php echo nl2br(implode($this->getValueAsArray($value, true), "\n"))?></td>
         </tr>
     <?php endforeach; ?>
     </tbody>
@@ -17,6 +18,7 @@
 
 <?php if($this->getInfo()->getAdditionalData()): ?>
     <?php if($this->getMandateReference()): ?>
+        <?php // @codingStandardsIgnoreLine ?>
         <p><?php echo $this->__('Mandate reference: %s', $this->escapeHtml($this->getMandateReference())) ?></p>
     <?php endif; ?>
 <?php endif; ?>
