--- a/app/design/frontend/base/default/template/buckaroo3extended/checkout/total/buckaroo_fee.phtml
+++ b/app/design/frontend/base/default/template/buckaroo3extended/checkout/total/buckaroo_fee.phtml
@@ -24,11 +24,13 @@
  * @license     http://www.magentocommerce.com/license/enterprise-edition
  */
 ?>
+<?php // @codingStandardsIgnoreFile ?>
 <?php /** @var TIG_Buckaroo3Extended_Block_PaymentFee_Checkout_Total_Fee $this */ ?>
-<?php $_displayMode = $this->getDisplayMode(); ?>
-<?php if ($_displayMode === TIG_Buckaroo3Extended_Block_PaymentFee_Checkout_Total_Fee::DISPLAY_MODE_BOTH): ?>
+<?php $displayMode = $this->getDisplayMode(); ?>
+<?php if ($displayMode === TIG_Buckaroo3Extended_Block_PaymentFee_Checkout_Total_Fee::DISPLAY_MODE_BOTH): ?>
     <tr>
-        <td colspan="<?php echo $this->escapeHtml($this->getColspan()); ?>" style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
+        <td colspan="<?php echo $this->escapeHtml($this->getColspan()); ?>"
+            style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
             <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?>
                 <strong>
             <?php endif; ?>
@@ -48,7 +50,8 @@
         </td>
     </tr>
     <tr>
-        <td colspan="<?php echo $this->escapeHtml($this->getColspan()); ?>" style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
+        <td colspan="<?php echo $this->escapeHtml($this->getColspan()); ?>"
+            style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
             <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?>
                 <strong>
             <?php endif; ?>
@@ -68,13 +71,14 @@
         </td>
     </tr>
 <?php else: ?>
-    <?php if ($_displayMode === TIG_Buckaroo3Extended_Block_PaymentFee_Checkout_Total_Fee::DISPLAY_MODE_EXCL): ?>
-        <?php $_value = $this->getValue(false); ?>
+    <?php if ($displayMode === TIG_Buckaroo3Extended_Block_PaymentFee_Checkout_Total_Fee::DISPLAY_MODE_EXCL): ?>
+        <?php $value = $this->getValue(false); ?>
     <?php else: ?>
-        <?php $_value = $this->getValue(true); ?>
+        <?php $value = $this->getValue(true); ?>
     <?php endif; ?>
     <tr>
-        <td colspan="<?php echo $this->escapeHtml($this->getColspan()); ?>" style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
+        <td colspan="<?php echo $this->escapeHtml($this->getColspan()); ?>"
+            style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
             <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?>
                 <strong>
             <?php endif; ?>
@@ -87,8 +91,8 @@
             <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?>
                 <strong>
             <?php endif; ?>
-            <?php echo $this->helper('checkout')->formatPrice($_value) ?>
-                <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?>
+            <?php echo $this->helper('checkout')->formatPrice($value) ?>
+            <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?>
                 </strong>
             <?php endif; ?>
         </td>
