--- a/app/design/frontend/base/default/template/buckaroo3extended/jquery.phtml
+++ b/app/design/frontend/base/default/template/buckaroo3extended/jquery.phtml
@@ -4,7 +4,10 @@
     }
 </script>
 <![if !lt IE 9]>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/TIG/Buckaroo3Extended/jquery-3.3.1.min.js', array('_secure' => true)); ?>"></script>
+<script type="text/javascript"
+    <?php // @codingStandardsIgnoreLine ?>
+        src="<?php echo $this->getSkinUrl('js/TIG/Buckaroo3Extended/jquery-3.3.1.min.js', array('_secure' => true));?>">
+</script>
 <script>
     var jQuery_1123 = jQuery.noConflict(true);
 </script>
