--- a/app/design/frontend/base/default/template/buckaroo3extended/oneStepCheckout.phtml
+++ b/app/design/frontend/base/default/template/buckaroo3extended/oneStepCheckout.phtml
@@ -2,11 +2,22 @@
 <script type="text/javascript">
     function saveOscBilling()
     {
-        var url_save_billing = '<?php echo $this->getUrl('onestepcheckout/ajax/save_billing', array('_secure'=>true)); ?>';
-        var url_set_methods = '<?php echo $this->getUrl('onestepcheckout/ajax/set_methods_separate', array('_secure'=>true)); ?>';
+        <?php // @codingStandardsIgnoreLine ?>
+        var url_save_billing = '<?php echo $this->getUrl(
+            'onestepcheckout/ajax/save_billing',
+            array('_secure'=>true)
+        ); ?>';
+        <?php // @codingStandardsIgnoreLine ?>
+        var url_set_methods = '<?php echo $this->getUrl(
+            'onestepcheckout/ajax/set_methods_separate',
+            array('_secure'=>true)
+        ); ?>';
 
         get_save_billing_function(url_save_billing, url_set_methods, true, true)();
     }
 </script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/TIG/Buckaroo3Extended/oneStepCheckout.js', array('_secure' => true)); ?>"></script>
+<script type="text/javascript"
+    <?php // @codingStandardsIgnoreLine ?>
+        src="<?php echo $this->getSkinUrl('js/TIG/Buckaroo3Extended/oneStepCheckout.js', array('_secure' => true)); ?>">
+</script>
 <![endif]>
