--- a/app/design/frontend/rwd/default/template/buckaroo3extended/cartebleue/checkout/form.phtml
+++ b/app/design/frontend/rwd/default/template/buckaroo3extended/cartebleue/checkout/form.phtml
@@ -1,4 +1,6 @@
 <div id="payment-errors" class="validation-advice" style="display:none;"></div>
 
-<?php $_code = $this->getMethodCode() ?>
-<ul id="payment_form_<?php echo $_code ?>" style="display:none" class="buckaroo3extended_input form-list buckaroo-method"></ul>
+<?php $code = $this->getMethodCode() ?>
+<?php // @codingStandardsIgnoreLine ?>
+<ul id="payment_form_<?php echo $code ?>" style="display:none"
+    class="buckaroo3extended_input form-list buckaroo-method"></ul>
