--- a/app/design/frontend/rwd/default/template/buckaroo3extended/empayment/checkout/form.phtml
+++ b/app/design/frontend/rwd/default/template/buckaroo3extended/empayment/checkout/form.phtml
@@ -1,6 +1,9 @@
 <div id="payment-errors" class="validation-advice" style="display:none;"></div>
 
 <fieldset class="form-list buckaroo-method">
-    <?php $_code=$this->getMethodCode() ?>
-    <ul id="payment_form_<?php echo $_code ?>" style="display:none" class="buckaroo3extended_input"></ul>
+    <?php $code = $this->getMethodCode() ?>
+    <?php // @codingStandardsIgnoreLine ?>
+    <ul id="payment_form_<?php echo $code ?>" style="display:none"
+        class="buckaroo3extended_input">
+    </ul>
 </fieldset>
