--- a/app/design/frontend/rwd/default/template/buckaroo3extended/paymentguarantee/checkout/form.phtml
+++ b/app/design/frontend/rwd/default/template/buckaroo3extended/paymentguarantee/checkout/form.phtml
@@ -1,62 +1,100 @@
 <?php
-
-$_code = $this->getMethodCode();
-
+// @codingStandardsIgnoreFile
+$code = $this->getMethodCode();
 ?>
 
 <div id="payment-errors" class="validation-advice" style="display:none;"></div>
 
-<ul id="payment_form_<?php echo $_code ?>" style="display:none" class="buckaroo3extended_input form-list buckaroo-method">
+<ul id="payment_form_<?php echo $code ?>" style="display:none"
+    class="buckaroo3extended_input form-list buckaroo-method">
     <li>
-        <label for="<?php echo $_code;?>_BPE_Customergender" class="required"><?php echo $this->__('Salutation');?>: <em>*</em></label>
+        <label for="<?php echo $code;?>_BPE_Customergender" class="required">
+            <?php echo $this->__('Salutation');?>: <em>*</em>
+        </label>
         <div class="input-box">
-            <select name="<?php echo $_code;?>_BPE_Customergender" class="validate-select validate-number" title="<?php echo $this->__('Salutation');?>" id="<?php echo $_code;?>_BPE_Customergender">
+            <select name="<?php echo $code;?>_BPE_Customergender" class="validate-select validate-number"
+                    title="<?php echo $this->__('Salutation');?>" id="<?php echo $code;?>_BPE_Customergender">
                 <option value=''><?php echo $this->__('Select'); ?></option>
-                <option value="1" <?php echo (in_array($this->getGender(),array(1,123)))?'selected':'';?>><?php echo $this->__('Mr.'); ?></option>
-                <option value="2" <?php echo (in_array($this->getGender(),array(2,124)))?'selected':'';?>><?php echo $this->__('Mrs.'); ?></option>
+                <option value="1" <?php echo (in_array($this->getGender(), array(1, 123))) ? 'selected' : ''; ?>>
+                    <?php echo $this->__('Mr.'); ?>
+                </option>
+                <option value="2" <?php echo (in_array($this->getGender(), array(2, 124))) ? 'selected' : ''; ?>>
+                    <?php echo $this->__('Mrs.'); ?>
+                </option>
             </select>
         </div>
     </li>
     <li>
         <label><?php echo $this->__('Billing name');?>:</label>
         <div class="input-box">
-            <span class="disabled stylefix" id="<?php echo $_code;?>_BPE_Customername" title="<?php echo $this->__('Name');?>"><?php echo $this->escapeHtml($this->getName()); ?></span>
+            <span class="disabled stylefix" id="<?php echo $code;?>_BPE_Customername"
+                  title="<?php echo $this->__('Name');?>">
+                <?php echo $this->escapeHtml($this->getName()); ?>
+            </span>
         </div>
     </li>
-    <li <?php if ($this->getAddress()->getTelephone() && $this->getAddress()->getTelephone() != '-'): ?>style="display:none;"<?php endif; ?>>
-        <label class="required" for="<?php echo $_code;?>_BPE_Customerphone"><?php echo $this->__('Telephone') ?>: <em>*</em></label>
+    <?php
+    $telephone = $this->getAddress()->getTelephone();
+    $displayStyle = ($telephone && $telephone != '-') ? 'style="display:none;"' : '';
+    ?>
+    <li <?php echo $displayStyle; ?>>
+        <label class="required" for="<?php echo $code;?>_BPE_Customerphone">
+            <?php echo $this->__('Telephone') ?>: <em>*</em>
+        </label>
         <div class="input-box">
-            <input class="input-text required-entry" type="text" title="<?php echo $this->__('Telephone') ?>" name="<?php echo $_code;?>_bpe_customer_phone_number" value="<?php echo $this->escapeHtml($this->getPhoneNumber()); ?>"  id="<?php echo $_code;?>_BPE_Customerphone"/>
+            <input class="input-text required-entry" type="text" title="<?php echo $this->__('Telephone') ?>"
+                   name="<?php echo $code;?>_bpe_customer_phone_number"
+                   value="<?php echo $this->escapeHtml($this->getPhoneNumber()); ?>"
+                   id="<?php echo $code;?>_BPE_Customerphone"/>
         </div>
     </li>
     <li>
         <?php
         echo $this->getLayout()
                   ->createBlock('buckaroo3extended/customer_widget_dob')
-                  ->setFieldIdFormat($_code . ':billing:%s')
-                  ->setFieldNameFormat('payment[' . $_code . '][%s]')
+                  ->setFieldIdFormat($code . ':billing:%s')
+                  ->setFieldNameFormat('payment[' . $code . '][%s]')
                   ->setIsRequired(true)
-                  ->setPaymentMethodCode($_code)
+                  ->setPaymentMethodCode($code)
                   ->setDate($this->getDob())
                   ->toHtml();
         ?>
     </li>
     <li>
-        <label for="<?php echo $_code;?>_BPE_customer_account_number" class="required"><?php echo $this->__('Bank account number') ?>: <em>*</em></label>
+        <label for="<?php echo $code;?>_BPE_customer_account_number" class="required">
+            <?php echo $this->__('Bank account number') ?>: <em>*</em>
+        </label>
         <div class="input-box">
-            <input class="input-text required-entry validate-buckaroo-iban" type="text" title="<?php echo $this->__('Bank account number') ?>" name="<?php echo $_code;?>_bpe_customer_account_number" value="<?php echo $this->escapeHtml($this->getBankAccount()); ?>" id="<?php echo $_code;?>_BPE_customer_account_number" />
+            <input class="input-text required-entry validate-buckaroo-iban" type="text"
+                   title="<?php echo $this->__('Bank account number') ?>"
+                   name="<?php echo $code;?>_bpe_customer_account_number"
+                   value="<?php echo $this->escapeHtml($this->getBankAccount()); ?>"
+                   id="<?php echo $code;?>_BPE_customer_account_number" />
         </div>
     </li>
     <li class="tac-accept">
         <div class="input-box agree">
-            <input style="float:left;" class="input-checkbox required-entry" type="checkbox" title="<?php echo $this->__('Terms and Conditions') ?>" name="<?php echo $_code;?>_bpe_terms_and_conditions" value="checked" id="<?php echo $_code;?>_BPE_terms_and_conditions" />
+            <input style="float:left;" class="input-checkbox required-entry" type="checkbox"
+                   title="<?php echo $this->__('Terms and Conditions') ?>"
+                   name="<?php echo $code;?>_bpe_terms_and_conditions" value="checked"
+                   id="<?php echo $code;?>_BPE_terms_and_conditions" />
         </div>
-        <label for="<?php echo $_code;?>_BPE_terms_and_conditions" class="required agree-label">
-            <?php echo $this->__('Yes, I accept the %sterms and condition%s for the use of Payment Guarantee.', '<a style="float:none;margin:0;" href="#" id="paymentguarantee_terms_and_conditions_link">', '</a>') ?> <em>*</em>
+        <label for="<?php echo $code;?>_BPE_terms_and_conditions" class="required agree-label">
+            <?php echo $this->__(
+                'Yes, I accept the %sterms and condition%s for the use of Payment Guarantee.',
+                '<a style="float:none;margin:0;" href="#" id="paymentguarantee_terms_and_conditions_link">',
+                '</a>'
+            ) ?> <em>*</em>
         </label>
     </li>
     <li>
-        <?php echo Mage::helper('buckaroo3extended')->__('Please make sure all fields are filled in correctly before proceeding.')?>
+        <?php echo Mage::helper('buckaroo3extended')
+            ->__('Please make sure all fields are filled in correctly before proceeding.')?>
     </li>
 </ul>
-<?php echo $this->getLayout()->createBlock('core/template')->setTemplate('buckaroo3extended/paymentguarantee/termsAndConditions.phtml')->toHtml();?>
+<?php
+echo $this->getLayout()
+    ->createBlock('core/template')
+    ->setTemplate('buckaroo3extended/paymentguarantee/termsAndConditions.phtml')
+    ->toHtml();
+?>
