--- a/app/design/adminhtml/default/default/template/buckaroo3extended/system/config/paymentmethodbanner.phtml
+++ b/app/design/adminhtml/default/default/template/buckaroo3extended/system/config/paymentmethodbanner.phtml
@@ -1,5 +1,10 @@
+<?php // @codingStandardsIgnoreFile ?>
 <div class="module-message buckaroo">
-    <h4><?php echo Mage::helper('buckaroo3extended')->__('Looking for Buckaroo payment methods? We have our own tab to the left under Sales.')?></h4>
+    <h4>
+        <?php echo Mage::helper('buckaroo3extended')->__(
+                'Looking for Buckaroo payment methods? We have our own tab to the left under Sales.'
+        )?>
+    </h4>
 </div>
 <?php /* Stylesheet not available */ ?>
 <style>
