--- a/app/design/adminhtml/default/default/template/buckaroo3extended/directdebit/info.phtml
+++ b/app/design/adminhtml/default/default/template/buckaroo3extended/directdebit/info.phtml
@@ -1,11 +1,12 @@
+<?php // @codingStandardsIgnoreFile ?>
 <?php echo $this->escapeHtml($this->getMethod()->getTitle()) ?>
 
-<?php if ($_specificInfo = $this->getSpecificInformation()):?>
+<?php if ($specificInfo = $this->getSpecificInformation()):?>
 <table>
-<?php foreach ($_specificInfo as $_label => $_value):?>
+<?php foreach ($specificInfo as $label => $value):?>
     <tr>
-        <td><?php echo $this->escapeHtml($_label)?>:</td>
-        <td><?php echo nl2br(implode($this->getValueAsArray($_value, true), "\n"))?></td>
+        <td><?php echo $this->escapeHtml($label)?>:</td>
+        <td><?php echo nl2br(implode($this->getValueAsArray($value, true), "\n"))?></td>
     </tr>
 <?php endforeach; ?>
 </table>
