--- a/app/design/adminhtml/default/default/template/buckaroo3extended/sales/order/totals/tax.phtml
+++ b/app/design/adminhtml/default/default/template/buckaroo3extended/sales/order/totals/tax.phtml
@@ -25,19 +25,20 @@
  */
 /** @var $this Mage_Adminhtml_Block_Sales_Order_Totals_Tax */
 ?>
+<?php // @codingStandardsIgnoreFile ?>
 <?php
-/** @var $_source Mage_Sales_Model_Order_Invoice */
-$_source   = $this->getSource();
-$_order    = $this->getOrder();
-$_fullInfo = $this->getFullTaxInfo();
-$_fullInfo = Mage::helper('buckaroo3extended')->addBuckarooFeeTaxInfo($_fullInfo, $_source, $_order);
+/** @var $source Mage_Sales_Model_Order_Invoice */
+$source   = $this->getSource();
+$order    = $this->getOrder();
+$fullInfo = $this->getFullTaxInfo();
+$fullInfo = Mage::helper('buckaroo3extended')->addBuckarooFeeTaxInfo($fullInfo, $source, $order);
 /**
  * Weee tax was not included in earlier Magento versions.
  */
-$_weees = array();
+$weees = array();
 if (method_exists($this->helper('tax'), 'getAllWeee')) {
-    $_weees = $this->helper('tax')
-        ->getAllWeee($_order);
+    $weees = $this->helper('tax')
+        ->getAllWeee($order);
 }
 
 global $taxIter;
@@ -46,8 +47,8 @@ $taxIter++;
 
 <?php if ($this->displayFullSummary()): ?>
     <?php $isTop = 1; ?>
-    <?php if (isset($_fullInfo[0]['rates'])): ?>
-        <?php foreach ($_fullInfo as $info): ?>
+    <?php if (isset($fullInfo[0]['rates'])): ?>
+        <?php foreach ($fullInfo as $info): ?>
             <?php if (isset($info['hidden']) && $info['hidden']) continue; ?>
             <?php
             $percent    = $info['percent'];
@@ -55,19 +56,22 @@ $taxIter++;
             $baseAmount = $info['base_amount'];
             $rates      = $info['rates'];
             $isFirst    = 1;
+            $ratesCount = count($rates);
             ?>
 
             <?php foreach ($rates as $rate): ?>
-                <tr class="summary-details<?php if ($isTop): echo ' summary-details-first'; endif; ?>"
+                <tr class="summary-details<?php echo (($isTop) ? ' summary-details-first' : ''); ?>"
                     style="display:none;">
-                    <?php if (!is_null($rate['percent'])): ?>
+                    <?php if (null !== $rate['percent']): ?>
                         <td class="label"><?php echo $rate['title']; ?> (<?php echo (float)$rate['percent']; ?>%)<br/>
                         </td>
                     <?php else: ?>
                         <td class="label"><?php echo $rate['title']; ?><br/></td>
                     <?php endif; ?>
                     <?php if ($isFirst): ?>
-                        <td rowspan="<?php echo count($rates); ?>"><?php echo $this->displayAmount($amount, $baseAmount); ?></td>
+                        <td rowspan="<?php echo $ratesCount; ?>">
+                            <?php echo $this->displayAmount($amount, $baseAmount); ?>
+                        </td>
                     <?php endif; ?>
                 </tr>
                 <?php
@@ -77,7 +81,7 @@ $taxIter++;
             <?php endforeach; ?>
         <?php endforeach; ?>
     <?php else: ?>
-        <?php foreach ($_fullInfo as $info): ?>
+        <?php foreach ($fullInfo as $info): ?>
             <?php
             $percent    = $info['percent'];
             $amount     = $info['tax_amount'];
@@ -85,9 +89,9 @@ $taxIter++;
             $isFirst    = 1;
             ?>
 
-            <tr class="summary-details<?php if ($isTop): echo ' summary-details-first'; endif; ?>"
+            <tr class="summary-details<?php echo (($isTop) ? ' summary-details-first' : ''); ?>"
                 style="display:none;">
-                <?php if (!is_null($info['percent'])): ?>
+                <?php if (null !== $info['percent']): ?>
                     <td class="label"><?php echo $this->escapeHtml($info['title']); ?>
                         (<?php echo (float)$info['percent']; ?>%)<br/></td>
                 <?php else: ?>
@@ -101,8 +105,9 @@ $taxIter++;
             ?>
         <?php endforeach; ?>
     <?php endif; ?>
-    <?php foreach ($_weees as $weeeTitle => $weeeAmount): ?>
-        <tr class="summary-details-<?php $this->escapeHtml($taxIter); ?> summary-details<?php if ($isTop): echo ' summary-details-first'; endif; ?>"
+    <?php foreach ($weees as $weeeTitle => $weeeAmount): ?>
+        <?php $detailsFirst = (($isTop) ? ' summary-details-first' : ''); ?>
+        <tr class="summary-details-<?php $this->escapeHtml($taxIter); ?> summary-details<?php echo $detailsFirst; ?>"
             style="display:none;">
             <td class="a-right" colspan="1">
                 <?php echo $this->escapeHtml($weeeTitle); ?>
@@ -114,7 +119,7 @@ $taxIter++;
         </tr>
     <?php endforeach; ?>
 <?php endif; ?>
-<?php if ($this->displayFullSummary() && ($_fullInfo || $_weees)): ?>
+<?php if ($this->displayFullSummary() && ($fullInfo || $weees)): ?>
 <tr class="summary-total" onclick="expandDetails(this, '.summary-details')">
     <?php else: ?>
 <tr>
@@ -129,6 +134,6 @@ $taxIter++;
         </div>
     </td>
     <td>
-        <?php echo $this->displayAmount($_source->getTaxAmount(), $_source->getBaseTaxAmount()); ?>
+        <?php echo $this->displayAmount($source->getTaxAmount(), $source->getBaseTaxAmount()); ?>
     </td>
 </tr>
