--- a/app/design/adminhtml/default/default/template/buckaroo3extended/system/config/responsehint.phtml
+++ b/app/design/adminhtml/default/default/template/buckaroo3extended/system/config/responsehint.phtml
@@ -1,7 +1,16 @@
+<?php // @codingStandardsIgnoreFile ?>
 <div class="module-message warning">
-    <h4><?php echo Mage::helper('buckaroo3extended')->__("Please read first our knowledge base article about this setting: <a href='https://servicedesk.tig.nl/hc/nl/articles/221318687' target='_blank'>More information about custom error messages</a>.")?></h4>
+    <h4>
+        <?php echo Mage::helper('buckaroo3extended')->__(
+            "Please read first our knowledge base article about this setting: " .
+            "<a href='https://servicedesk.tig.nl/hc/nl/articles/221318687' target='_blank'>" .
+            "More information about custom error messages</a>."
+        )?>
+    </h4>
 </div>
-<script type="text/javascript" charset="utf-8" src="<?php echo $this->getSkinUrl("js/tig_buckaroo3extended/jquery-3.3.1.min.js");?>"></script>
+<script type="text/javascript" charset="utf-8"
+        src="<?php echo $this->getSkinUrl("js/tig_buckaroo3extended/jquery-3.3.1.min.js");?>">
+</script>
 <script type = 'text/javascript'>
     var jQuery_1123 = jQuery.noConflict(true);
     jQuery_1123('document').ready(
@@ -19,7 +28,12 @@
                 jQuery_1123("#buckaroo_buckaroo3extended").prev().prev().addClass('live');
             }
 
-            jQuery_1123('.buckaroo-header').html('&nbsp;').css('background-image', "url('<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_SKIN); ?>adminhtml/default/default/images/tig_buckaroo3extended/buckaroo_large.png')").css('width','220').css('height','30').css('background-size','80%').css('background-repeat','no-repeat');
+            var skinUrl = "<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_SKIN); ?>";
+
+            jQuery_1123('.buckaroo-header').html('&nbsp;').css(
+                'background-image',
+                "url('" + skinUrl + "adminhtml/default/default/images/tig_buckaroo3extended/buckaroo_large.png')"
+            ).css('width','220').css('height','30').css('background-size','80%').css('background-repeat','no-repeat');
 
             <?php foreach($this->config as $config): ?>
             jQuery_1123('#buckaroo_buckaroo3extended_<?php echo $config; ?>').prev().prev().addClass('advanced');
