BUCKM1-569 : added Pay call

--- a/app/design/frontend/base/default/template/buckaroo3extended/afterpay20/checkout/form.phtml
+++ b/app/design/frontend/base/default/template/buckaroo3extended/afterpay20/checkout/form.phtml
@@ -9,14 +9,14 @@
                 <?php echo $this->__('Salutation');?>: <em>*</em>
             </label>
             <div class="input-box">
-                <select name="<?php echo $code;?>_BPE_Customergender" class="validate-select validate-number"
+                <select name="<?php echo $code;?>_BPE_Customergender" class="validate-select"
                         title="<?php echo $this->__('Salutation');?>" id="<?php echo $code;?>_BPE_Customergender">
                     <option value=''><?php echo $this->__('Select'); ?></option>
-                    <option value="1" <?php echo (in_array($this->getGender(), array(1, 123))) ? 'selected' : '';?>>
+                    <option value="Mr" <?php echo (in_array($this->getGender(), array(1, 123, 'Mr'))) ? 'selected' : '';?>>
                         <?php echo $this->__('Mr.'); ?>
                     </option>
-                    <option value="2" <?php echo (in_array($this->getGender(), array(2, 124))) ? 'selected' : '';?>>
-                        <?php echo $this->__('Mrs.'); ?>
+                    <option value="Miss" <?php echo (in_array($this->getGender(), array(2, 124, 'Miss'))) ? 'selected' : '';?>>
+                        <?php echo $this->__('Miss.'); ?>
                     </option>
                 </select>
             </div>
