--- a/app/design/frontend/base/default/template/buckaroo3extended/afterpay20/checkout/form.phtml
+++ b/app/design/frontend/base/default/template/buckaroo3extended/afterpay20/checkout/form.phtml
@@ -1,9 +1,34 @@
 <?php // @codingStandardsIgnoreFile ?>
 <?php $code = $this->getMethodCode() ?>
+<?php
+
+$requiredGender = false;
+$requiredPhoneNumber = false;
+$requiredDob = false;
+$requiredIdNumber = false;
+
+switch($this->getBillingCountry()) {
+    case 'NL' :
+    case 'BE' :
+        $requiredGender = true;
+        $requiredPhoneNumber = true;
+        $requiredDob = true;
+        break;
+    case 'FI' :
+        $requiredIdNumber = true;
+        break;
+    default:
+        break;
+}
+
+?>
+
 
 <div id="payment-errors" class="validation-advice" style="display:none;"></div>
 <fieldset class="form-list buckaroo-method">
     <ul id="payment_form_<?php echo $code ?>" style="display:none" class="buckaroo3extended_input">
+
+        <?php if ($requiredGender == true) : ?>
         <li>
             <label for="<?php echo $code;?>_BPE_Customergender" class="required">
                 <?php echo $this->__('Salutation');?>: <em>*</em>
@@ -21,6 +46,8 @@
                 </select>
             </div>
         </li>
+        <?php endif;?>
+
         <li>
             <label><?php echo $this->__('Billing name');?>:</label>
             <div class="input-box">
@@ -28,6 +55,8 @@
                       title="<?php echo $this->__('Name');?>"><?php echo $this->escapeHtml($this->getName()); ?></span>
             </div>
         </li>
+
+        <?php if ($requiredPhoneNumber == true) : ?>
         <?php
         $telephone = $this->getAddress()->getTelephone();
         $display = ($telephone && $telephone != '-') ? 'style="display:none;"' : '';
@@ -43,17 +72,37 @@
                        id="<?php echo $code;?>_BPE_Customerphone"/>
             </div>
         </li>
+        <?php endif;?>
+
+        <?php if ($requiredDob == true) : ?>
         <li>
             <?php
             echo $this->getLayout()->createBlock('buckaroo3extended/customer_widget_dob')
                 ->setFieldIdFormat($code . ':billing:%s')
                 ->setFieldNameFormat('payment[' . $code . '][%s]')
+                ->setFieldId($code.'_bpe_customer_idnumber')
+                ->setFieldName($code.'_bpe_customer_idnumber')
                 ->setIsRequired(true)
                 ->setPaymentMethodCode($code)
                 ->setDate($this->getDob())
                 ->toHtml();
             ?>
         </li>
+        <?php endif;?>
+
+        <?php if ($requiredIdNumber == true) : ?>
+            <li>
+                <?php
+                echo $this->getLayout()->createBlock('buckaroo3extended/customer_widget_idnumber')
+                    ->setFieldIdFormat($code . ':billing:%s')
+                    ->setFieldNameFormat('payment[' . $code . '][%s]')
+                    ->setIsRequired(true)
+                    ->setPaymentMethodCode($code)
+                    ->toHtml();
+                ?>
+            </li>
+        <?php endif;?>
+
 
         <li class="tac-accept">
             <div class="input-box">
@@ -66,9 +115,18 @@
                 <?php echo $this->__(
                     'Yes, I accept the %sterms and condition%s for the use of Afterpay.',
                     '<a style="float:none;margin:0;" id="' . $code . '-tos-url" target="_blank" href="'
-                    . $this->getTosUrl() . '">',
+                    . $this->getAcceptanceUrl() . '">',
                     '</a>'
-                ) ?> <em>*</em>
+                );
+                if ($this->getBillingCountry() == 'BE') {
+                    echo $this->__(
+                        '(Or click here for the French translation: %sterms and condition%s.)',
+                        '<a style="float:none;margin:0;" id="' . $code . '-tos-url" target="_blank" href="'
+                        . $this->getAcceptanceUrl('fr_be') . '">',
+                        '</a>'
+                    );
+                }?>
+                <em>*</em>
             </label>
         </li>
 
